###### TWE 5.1-1 RELEASED ######
2013-10-24 Sasa Bojanic <sasaboy@together.at>
   # On non-Windows OSs files we are not using RandomFileAccess class to open/save files anymore. 
     Anyway, on non-Windows OSs it wasn't possible to lock files, and there was a problem with this 
     approach in some cases - the file wasn't saved if another application changed it meanwhile.

2013-10-22 Sasa Bojanic <sasaboy@together.at>
   # New configuration parameter to specify preferred number of lines for text areas where expressions are defined(PreferredNumberOfLinesForExpression)
   # New configuration parameter to specify preferred number of lines for text areas where actual parameter expressions are defined (XMLActualParametersPanel.preferredNumberOfLinesForExpression)</para
   # Now XMLMultiLineTextPanelWithOptionalChoiceButtons panel constructor accepts parameter to specify how many lines are preferred for text area
   # Hidding and disabling main divider if application is configured to have only one area 
   
2013-07-24 Sasa Bojanic <sasaboy@together.at>
   # Improvement regarding silent uninstallation

2013-07-22 Sasa Bojanic <sasaboy@together.at>
   # Builds changed so that windows build is generating tar.gz and src.tar.gz packages

###### TWE 5.0-1 RELEASED ######
2013-07-29 Sasa Bojanic <sasaboy@together.at>
   # New application and XPDL icons

2013-07-02 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - support for XPILLog event audit manager extended attribute XPILLOG_EVENT_AUDIT_MANAGER_LOG_XPIL
      - now always displaying possible process extended attributes

2013-06-28 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Create process -> Create preconfigured error process
   # build procedure improved so Shark mode has all the required images

2013-06-13 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: now correctly handling references to XPDL_STRING extended attributes

2013-06-06 Sasa Bojanic <sasaboy@together.at>